--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <div class="container" id="home-content">
     <div class="col-md-8 col-md-offset-2">
-      <h1>Pick the best high school for you!</h1>
+      <h1 class="spacer-lg">Pick the best high school for you!</h1>
       <p>This site is here to help pick the best High School for you! High school is an important step in your life as it helps you prepare for your future. Here you will be able to learn a bit more about the different types of high school and figure out what you need to do to get into that school.</p>
 
       <p>6th graders! Start learning about what you need to do in 7th grade to get into the BEST High School for you.</p>
