changes alignment of step content

--- a/how_to_apply.html
+++ b/how_to_apply.html
@@ -42,7 +42,7 @@
           <div class="media-left">
             <div class="circle">1</div>
           </div>
-          <div class="media-body">
+          <div class="media-body step-content">
             Check your eligibility letter to see which schools you can apply to!
           </div>
         </div>
@@ -51,7 +51,7 @@
           <div class="media-left">
             <div class="circle">2</div>
           </div>
-          <div class="media-body">
+          <div class="media-body step-content">
             Set up your account online (you will need your PIN number from your eligibility letter).
           </div>
         </div>
@@ -60,7 +60,7 @@
           <div class="media-left">
             <div class="circle">3</div>
           </div>
-          <div class="media-body">
+          <div class="media-body step-content">
             Schedule your appointments to take admission tests or attend an information session. Make sure you pay attention to the dates!
           </div>
         </div>
@@ -69,7 +69,7 @@
           <div class="media-left">
             <div class="circle">4</div>
           </div>
-          <div class="media-body">
+          <div class="media-body step-content">
             <a href="#">Apply Here!</a> or download a <a href="#">paper application</a>
           </div>
         </div>
