edits styling and adds school data page

--- a/how_to_apply.html
+++ b/how_to_apply.html
@@ -11,28 +11,29 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">High School Finder</a>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="about.html">About high schools</a></li>
-        <li><a href="list.html">Explore high schools</a></li>
-        <li><a href="how_to_apply.html">How to apply</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">High School Finder</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="about.html">About high schools</a></li>
+          <li><a href="list.html">Explore high schools</a></li>
+          <li><a href="school_data.html">Understanding school data</a></li>
+          <li><a href="how_to_apply.html">How to apply</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -78,21 +79,21 @@
         <br>
         <div class="panel panel-default">
           <div class="panel-body apply-school beep">
-            <h3>Charter Schools</h3>
-            <h4>Eligibility</h4>
+            <h2>Charter Schools</h2>
+            <h3>Eligibility</h3>
             <p>All students are eligible to apply to a Charter School. If you want to attend a Charter School you can contact the school and retrieve an application. Some schools might have you attend an information session.</p>
-            <h4>Selection</h4>
+            <h3>Selection</h3>
             <p>Students are chosen by lottery.</p>
           </div>
         </div>
 
         <div class="panel panel-default">
           <div class="panel-body apply-school">
-            <h3>CTE - College and Career Academies </h3>
-            <h4>Eligibility</h4>
+            <h2>CTE - College and Career Academies </h2>
+            <h3>Eligibility</h3>
             <p><i>Lottery Academies:</i> no minimum requirements to apply</p>
             <p><i>Selective Academies:</i> Must have completed 7th grade during the last school year. Specific NWEA MAP scores are required for eligibility for the CTE program at Jones. </p>
-            <h4>Selection</h4>
+            <h3>Selection</h3>
             <p><i>Lottery Academies:</i> Most of the College and Career Academies are lottery academies. If more applications are received than there are spaces available, students are selected by lottery with preference given to students meeting minimum requirements.</p>
             <p><i>Selective Academies:</i> Selection is based on the point system with each school selecting its own minimum cutoff score for applicants.</p>
           </div>
@@ -100,41 +101,41 @@
 
         <div class="panel panel-default">
           <div class="panel-body apply-school">
-            <h3>IB High Schools</h3>
-            <h4>Eligibility</h4>
+            <h2>IB High Schools</h2>
+            <h3>Eligibility</h3>
             <p>Students must meet minimum eligibility requirements to apply. Eligibility is based on NWEA MAP scores in reading and math and cumulative grades received during 7th grade.  The high school calculator will help you see which of these programs you are qualified for.</p>
             <p>All students applying for the Diploma Programme must attend one IB Information Session. Attending the Information Session does not guarantee an offer of admittance. However, if you do not attend an Information Session, you will not be considered for any of the IB schools to which you apply. </p>
-            <h4>Selection</h4>
+            <h3>Selection</h3>
             <p>Students are selected to IB Programmes based on a 900-point system. These points are divided evenly with a maximum of 450 for NWEA MAP test scores and 450 for 7th grade cumulative GPA. A Bonus of 50 points can be earned if you live within the attendance boundary of the school you are applying too. Each school IB High School sets its own minimum cut off score.</p>
           </div>
         </div>
 
         <div class="panel panel-default">
           <div class="panel-body apply-school">
-            <h3>Magnet High Schools and Programs</h3>
-            <h4>Eligibility</h4>
+            <h2>Magnet High Schools and Programs</h2>
+            <h3>Eligibility</h3>
             <p>Students must meet minimum eligibility requirements to apply. Eligibility is based on NWEA MAP scores in reading and math.</p>
-            <h4>Selection</h4>
+            <h3>Selection</h3>
             <p>Students are selected for most Magnet High School through computerized lottery, with some exceptions. You must meet the minimum requirements set by each school to be included in the lottery. Some preference is given if you have a sibling who has attended the school or if you live with 2.5 miles of the school.</p>
           </div>
         </div>
 
         <div class="panel panel-default">
           <div class="panel-body apply-school">
-            <h3>Neighborhood/Open Enrollment Schools</h3>
-            <h4>Eligibility</h4>
+            <h2>Neighborhood/Open Enrollment Schools</h2>
+            <h3>Eligibility</h3>
             <p>All students are eligible to apply to Neighborhood High Schools. If you live in the neighborhood boundary you do not need to apply. If you live outside of the school boundaries you need to fill out an application to be entered into the lottery.</p>
-            <h4>Selection</h4>
+            <h3>Selection</h3>
             <p>Students living outside the attendance boundary or applying to an Early College STEM program or other specialized programs are randomly selected through a computerized lottery if the school receives more applications than available seats.</p>
           </div>
         </div>
 
         <div class="panel panel-default">
           <div class="panel-body apply-school">
-            <h3>Military Academies</h3>
-            <h4>Eligibility</h4>
+            <h2>Military Academies</h2>
+            <h3>Eligibility</h3>
             <p>Students must meet minimum eligibility requirements to apply. Eligibility is based on NWEA MAP scores in reading and math.</p>
-            <h4>Selection</h4>
+            <h3>Selection</h3>
             <p>Students must also attend one Information Session where they will completed a Motivation and Perseverance Assessment and write an essay.</p>
             <p>Student selection is based on a 500 point system. These points are divided between seventh grade final grades (150 points maximum), NWEA MAP Scores (150 points maximum), the assessment (100 points maximum), and the essay (100 points maximum). The high school calculator will help you see which of these programs you are qualified for.</p>
           </div>
@@ -142,10 +143,10 @@
 
         <div class="panel panel-default">
           <div class="panel-body apply-school">
-            <h3>Selective Enrollment High Schools</h3>
-            <h4>Eligibility</h4>
+            <h2>Selective Enrollment High Schools</h2>
+            <h3>Eligibility</h3>
             <p>Students must meet minimum eligibility requirements to apply. Eligibility is based on NWEA MAP scores in reading and math.</p>
-            <h4>Selection</h4>
+            <h3>Selection</h3>
             <p>If you are interest in attending a Selective Enrollment High School you must take only one admission test. The high school calculator will help you see which of these programs you are qualified for and what you will need to get on the admission test.</p>
 
             <p>Student selection is based on a 900-point system. These points are divided evenly with a 300-point maximum between your 7th grade cumulative grades, NWEA MAP scores, and admission test.</p>
