--- a/profile.html
+++ b/profile.html
@@ -26,6 +26,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="about.html">About high schools</a></li>
           <li><a href="list.html">Explore high schools</a></li>
+          <li><a href="school_data.html">Understanding school data</a></li>
           <li><a href="how_to_apply.html">How to apply</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
