--- a/about.html
+++ b/about.html
@@ -11,28 +11,29 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">High School Finder</a>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="about.html">About high schools</a></li>
-        <li><a href="list.html">Explore high schools</a></li>
-        <li><a href="how_to_apply.html">How to apply</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">High School Finder</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="about.html">About high schools</a></li>
+          <li><a href="list.html">Explore high schools</a></li>
+          <li><a href="school_data.html">Understanding school data</a></li>
+          <li><a href="how_to_apply.html">How to apply</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -43,55 +44,56 @@
 
         <div class="panel panel-default">
           <div class="panel-body about-school">
-            <h3>Charter Schools</h3>
+            <h2>Charter Schools</h2>
             <p>Charter schools are public schools open to all Chicago children. Charters are approved by the board of Education but operate independently from the Board and each other. Due to that Charters have more freedom to be more innovative.</p>
           </div>
         </div>
 
         <div class="panel panel-default">
           <div class="panel-body about-school">
-            <h3>CTE - College and Career Academies </h3>
+            <h2>CTE - College and Career Academies </h2>
             <p>CTE-College and Career Academies prepare students for college and career success. Students take college prep courses in the core areas of math, science, and English, and also participate in hands-on training experiences in their chosen industry. (For more information on this program, see the Glossary of this guide.) Note that the CTE-College and Career Academies at Simeon Career Academy and Westinghouse High School have a separate application process; contact the schools for details.</p>
           </div>
         </div>
 
         <div class="panel panel-default">
           <div class="panel-body about-school">
-            <h3>IB High Schools</h3>
+            <h2>IB High Schools</h2>
             <p>The International Baccalaureate Programmes are guided by the mission to develop inquiring, knowledgeable and caring young people who help create a better and more peaceful world through intercultural understanding and respect. IB programs encourage students across the world to become active, compassionate, and lifelong learners.</p>
           </div>
         </div>
 
         <div class="panel panel-default">
           <div class="panel-body about-school">
-            <h3>Magnet High Schools and Programs</h3>
+            <h2>Magnet High Schools and Programs</h2>
             <p>Magnet High Schools offer one or more specialty programs. They do not have neighborhood attendance boundaries (with some exception), and they accept students from throughout the city.</p>
           </div>
         </div>
 
         <div class="panel panel-default">
           <div class="panel-body about-school">
-            <h3>Neighborhood/Open Enrollment Schools</h3>
+            <h2>Neighborhood/Open Enrollment Schools</h2>
             <p>Neighborhood High Schools teach the general education curriculum and do not have application requirements. Some of these schools have specialized programs such as Early College Stem or are open to all Chicago students.</p>
           </div>
         </div>
 
         <div class="panel panel-default">
           <div class="panel-body about-school">
-            <h3>Military Academies</h3>
+            <h2>Military Academies</h2>
             <p>Military Academies prepare students for college and subsequent careers in a structured environment. Students wear uniforms, and take part in leadership opportunities and co-curricular activities, such as college trips and citywide competitions.</p>
           </div>
         </div>
 
         <div class="panel panel-default">
           <div class="panel-body about-school">
-            <h3>Selective Enrollment High Schools</h3>
+            <h2>Selective Enrollment High Schools</h2>
             <p>Selective Enrollment High Schools provide academically advanced students with a challenging college preparatory experience. Each of the Selective Enrollment High Schools offers a rigorous curriculum with mainly honors and Advanced Placement (AP) courses.</p>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <footer></footer>
 
 
 </body>
