--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">High School Finder</a>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="about.html">About high schools</a></li>
-        <li><a href="list.html">Explore high schools</a></li>
-        <li><a href="how_to_apply.html">How to apply</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">High School Finder</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="about.html">About high schools</a></li>
+          <li><a href="list.html">Explore high schools</a></li>
+          <li><a href="school_data.html">Understanding school data</a></li>
+          <li><a href="how_to_apply.html">How to apply</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
   <div class="home-bg">
     <div class="home-header">
       <div class="container">
@@ -57,12 +57,13 @@
       <p>7th graders! Check in and see if you are on-track to get into the BEST High School for you.</p>
 
       <p>8th graders! It’s time to apply! This site will help you determine where you should go to start your future success!</p>
-
+<!--
       <p>Key Dates</p>
       <p>Testing Dates</p>
-      <p>Application Due dates</p>
+      <p>Application Due dates</p> -->
     </div>
   </div>
+  <footer></footer>
 
 </body>
 </html>
