minor styling edit to home page

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       <h1 class="spacer-lg">Pick the best high school for you!</h1>
       <p>This site is here to help pick the best High School for you! High school is an important step in your life as it helps you prepare for your future. Here you will be able to learn a bit more about the different types of high school and figure out what you need to do to get into that school.</p>
 
-      <p>6th graders! Start learning about what you need to do in 7th grade to get into the BEST High School for you.</p>
+      <p><strong>6th graders!</strong> Start learning about what you need to do in 7th grade to get into the BEST High School for you.</p>
 
-      <p>7th graders! Check in and see if you are on-track to get into the BEST High School for you.</p>
+      <p><strong>7th graders!</strong> Check in and see if you are on-track to get into the BEST High School for you.</p>
 
-      <p>8th graders! It’s time to apply! This site will help you determine where you should go to start your future success!</p>
+      <p><strong>8th graders!</strong> It’s time to apply! This site will help you determine where you should go to start your future success!</p>
 <!--
       <p>Key Dates</p>
       <p>Testing Dates</p>
