--- a/how_to_apply.html
+++ b/how_to_apply.html
@@ -71,7 +71,7 @@
             <div class="circle">4</div>
           </div>
           <div class="media-body step-content">
-            <a href="#">Apply Here!</a> or download a <a href="#">paper application</a>
+            <a href="http://www.apply.cps.edu">Apply Here!</a> or download a <a href="http://www.cpsoae.org">paper application</a> <small>(click apply)</small>
           </div>
         </div>
         <br>
@@ -151,7 +151,7 @@
 
             <p>Student selection is based on a 900-point system. These points are divided evenly with a 300-point maximum between your 7th grade cumulative grades, NWEA MAP scores, and admission test.</p>
 
-            <p>The first 30% of available seats at each school are filled strictly according to the student scores. The remaining seats are equally distributed among the four tiers and are filled by the highest-scoring students in each tier. Tiers are determined by your address you can find out your tier here: link.</p>
+            <p>The first 30% of available seats at each school are filled strictly according to the student scores. The remaining seats are equally distributed among the four tiers and are filled by the highest-scoring students in each tier. Tiers are determined by your address you can find out your tier <a href="http://cpstiers.opencityapps.org/">here</a>.</p>
           </div>
         </div>
       </div>
