--- a/list.html
+++ b/list.html
@@ -201,7 +201,7 @@
                   </h6>
                   <div class="filter-align">
                     <div class="form-group">
-                      <select class="interests" data-placeholder="Choose a Country..." style="width:100%;" multiple="" tabindex="3">
+                      <select class="interests" data-placeholder="Choose an interest..." style="width:100%;" multiple="" tabindex="3">
                         <option value=''>Academic Decathlon</option>
                         <option value=''>Art Club</option>
                         <option value=''>Band</option>
@@ -246,56 +246,56 @@
           <li class="media">
             <div class="media-left">
               <a href="profile.html">
-                <img class="media-object" width="150" src="https://upload.wikimedia.org/wikipedia/en/f/f5/Wpcplogo.jpg" alt="...">
+                <img class="media-object" width="150" src="http://placehold.it/150x150" alt="...">
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="profile.html"> Walter Payton</a></h4>
-              <div><strong>1034 N Wells St, Chicago, IL 60610</strong></div>
+              <h4 class="media-heading"><a href="profile.html">School 1</a></h4>
+              <div><strong>Chicago, IL</strong></div>
               <div>Graduation rate: 90%</div>
-              <div>Average ACT: 29%</div>
+              <div>Average ACT: 29</div>
               <div>College enrollment rate: 80%</div>
             </div>
           </li>
           <li class="media">
             <div class="media-left">
               <a href="profile.html">
-                <img class="media-object" width="150" src="http://www.wyoung.org/ourpages/auto/2008/4/29/1209492983356/image001.jpg" alt="...">
+                <img class="media-object" width="150" src="http://placehold.it/150x150" alt="...">
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="profile.html">Whitney Young</a></h4>
-              <div><strong>1034 N Wells St, Chicago, IL 60610</strong></div>
+              <h4 class="media-heading"><a href="profile.html">School 2</a></h4>
+              <div><strong>Chicago, IL</strong></div>
               <div>Graduation rate: 90%</div>
-              <div>Average ACT: 29%</div>
+              <div>Average ACT: 29</div>
               <div>College enrollment rate: 80%</div>
             </div>
           </li>
           <li class="media">
             <div class="media-left">
               <a href="profile.html">
-                <img class="media-object" width="150" src="https://www.stbaldricks.org/photo/event/2104/2012/medium" alt="...">
+                <img class="media-object" width="150" src="http://placehold.it/150x150" alt="...">
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="profile.html">Jones</a></h4>
-              <div><strong>1034 N Wells St, Chicago, IL 60610</strong></div>
+              <h4 class="media-heading"><a href="profile.html">School 3</a></h4>
+              <div><strong>Chicago, IL</strong></div>
               <div>Graduation rate: 90%</div>
-              <div>Average ACT: 29%</div>
+              <div>Average ACT: 29</div>
               <div>College enrollment rate: 80%</div>
             </div>
           </li>
           <li class="media">
             <div class="media-left">
               <a href="profile.html">
-                <img class="media-object" width="150" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/King_College_Prep_(Chicago).jpg/265px-King_College_Prep_(Chicago).jpg" alt="...">
+                <img class="media-object" width="150" src="http://placehold.it/150x150" alt="...">
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="profile.html">King</a></h4>
-              <div><strong>1034 N Wells St, Chicago, IL 60610</strong></div>
+              <h4 class="media-heading"><a href="profile.html">School 4</a></h4>
+              <div><strong>Chicago, IL</strong></div>
               <div>Graduation rate: 90%</div>
-              <div>Average ACT: 29%</div>
+              <div>Average ACT: 29</div>
               <div>College enrollment rate: 80%</div>
             </div>
           </li>
