--- a/map.html
+++ b/map.html
@@ -25,21 +25,21 @@
         var myLatlng = new google.maps.LatLng(41.903209, -87.637725);
         var marker = new google.maps.Marker({
             position: myLatlng,
-            title:"Walter Payton",
+            title:"School 1",
             map: map
         });
 
         var myLatlng = new google.maps.LatLng(41.878266, -87.663704);
         var marker = new google.maps.Marker({
             position: myLatlng,
-            title:"Whitney Young",
+            title:"School 2",
             map: map
         });
 
         var myLatlng = new google.maps.LatLng(41.874376, -87.630086);
         var marker = new google.maps.Marker({
             position: myLatlng,
-            title:"Jones",
+            title:"School 3",
             map: map
         });
         // var contentString = '<h3 id="firstHeading" class="firstHeading"><a href="#">Jones College Prep</a></h3>';
@@ -53,7 +53,7 @@
         var myLatlng = new google.maps.LatLng(41.813873, -87.60296);
         var marker2 = new google.maps.Marker({
             position: myLatlng,
-            title:"King",
+            title:"School 4",
             map: map
         });
         // var contentString = '<h3 id="firstHeading" class="firstHeading"><a href="#">King College Prep</a></h3>';
@@ -260,7 +260,7 @@
                   </h6>
                   <div class="filter-align">
                     <div class="form-group">
-                      <select class="interests" data-placeholder="Choose a Country..." style="width:100%;" multiple="" tabindex="3">
+                      <select class="interests" data-placeholder="Choose an interest..." style="width:100%;" multiple="" tabindex="3">
                         <option value=''>Academic Decathlon</option>
                         <option value=''>Art Club</option>
                         <option value=''>Band</option>
