--- a/profile.html
+++ b/profile.html
@@ -37,7 +37,7 @@
       <h1>Amundsen</h1>
       <h2>Neighborhood school</h2>
       <h4>5110 Damen ave, Chicago IL, 60625</h4>
-      <h4><a href="#">Link to CTA trip planner</a></h4>
+      <h4><a href="http://www.transitchicago.com/travel_information/trip_planner.aspx">Link to CTA trip planner</a></h4>
     </div>
   </div>
   <div class="container profile">
@@ -66,8 +66,8 @@
       <div class="col-lg-2 col-md-4 col-sm-6">
         <div class="panel panel-default stat-panel">
           <div class="panel-body">
-            <div class="main-stat">17</div>
-            <div class="main-stat-desc">average ACT score</div>
+            <div class="main-stat">3 pts</div>
+            <div class="main-stat-desc">average ACT growth</div>
           </div>
         </div>
       </div>
@@ -91,7 +91,7 @@
         <div class="panel panel-default stat-panel">
           <div class="panel-body">
             <div class="main-stat">2+</div>
-            <div class="main-stat-desc"><a href="#">School quality rating</a></div>
+            <div class="main-stat-desc"><a href="http://schoolreports.cps.edu/SQRP/2014_SQRP_Summary_609695.pdf">School quality rating</a></div>
           </div>
         </div>
       </div>
